// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Basic Usage > should render 1`] = `
<div>
  <div
    class="bgm-comment-actions"
  >
    <button
      class="bgm-button bgm-button--plain bgm-button--size-small"
      title="回复"
    >
      <div />
    </button>
    <div
      class="bgm-popover bgm-reactions-dropdown"
    >
      <button
        class="bgm-button bgm-reactions-dropdown__button bgm-button--plain"
      >
        <div />
      </button>
      <div
        class="bgm-popover__container"
      >
        <div
          class="bgm-popover__content"
        >
          <ul
            class="bgm-reactions-dropdown__grid"
          >
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/44.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/101.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/41.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/15.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/46.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/65.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/49.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/23.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/40.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/14.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/83.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/53.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/79.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/102.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/51.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/37.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/21.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/89.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/08.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/29.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/98.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/93.gif"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="bgm-popover"
    >
      <button
        class="bgm-button bgm-comment-actions__more bgm-button--plain bgm-button--size-small"
        title="其他"
      >
        <div />
      </button>
      <div
        class="bgm-popover__container"
      >
        <div
          class="bgm-popover__content"
        >
          <div
            class="bgm-comment-actions__popover"
          >
            <button
              class="bgm-button bgm-button--text"
            >
              绝交
            </button>
            <button
              class="bgm-button bgm-button--text"
            >
              报告疑虑
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Is Author > should render 1`] = `
<div>
  <div
    class="bgm-comment-actions"
  >
    <button
      class="bgm-button bgm-button--plain bgm-button--size-small"
      title="回复"
    >
      <div />
    </button>
    <div
      class="bgm-popover bgm-reactions-dropdown"
    >
      <button
        class="bgm-button bgm-reactions-dropdown__button bgm-button--plain"
      >
        <div />
      </button>
      <div
        class="bgm-popover__container"
      >
        <div
          class="bgm-popover__content"
        >
          <ul
            class="bgm-reactions-dropdown__grid"
          >
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/44.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/101.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/41.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/15.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/46.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/65.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/49.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/23.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/40.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/14.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/83.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/53.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/79.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/102.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/51.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/37.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/21.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/89.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/08.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/29.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/98.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/93.gif"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="bgm-popover"
    >
      <button
        class="bgm-button bgm-comment-actions__more bgm-button--plain bgm-button--size-small"
        title="其他"
      >
        <div />
      </button>
      <div
        class="bgm-popover__container"
      >
        <div
          class="bgm-popover__content"
        >
          <div
            class="bgm-comment-actions__popover"
          >
            <a
              class="bgm-button bgm-button--link bgm-button--text bgm-button--size-small"
              href="/group/reply/233/edit"
            >
              编辑
            </a>
            <button
              class="bgm-button bgm-button--text bgm-button--size-small"
            >
              删除
            </button>
            <button
              class="bgm-button bgm-button--text"
            >
              绝交
            </button>
            <button
              class="bgm-button bgm-button--text"
            >
              报告疑虑
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Non-editable > should render 1`] = `
<div>
  <div
    class="bgm-comment-actions"
  >
    <button
      class="bgm-button bgm-button--plain bgm-button--size-small"
      title="回复"
    >
      <div />
    </button>
    <div
      class="bgm-popover bgm-reactions-dropdown"
    >
      <button
        class="bgm-button bgm-reactions-dropdown__button bgm-button--plain"
      >
        <div />
      </button>
      <div
        class="bgm-popover__container"
      >
        <div
          class="bgm-popover__content"
        >
          <ul
            class="bgm-reactions-dropdown__grid"
          >
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/44.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/101.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/41.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/15.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/46.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/65.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/49.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/23.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/40.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/14.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/83.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/53.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/79.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/102.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/51.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/37.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/21.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/89.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/08.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/29.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/98.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/93.gif"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="bgm-popover"
    >
      <button
        class="bgm-button bgm-comment-actions__more bgm-button--plain bgm-button--size-small"
        title="其他"
      >
        <div />
      </button>
      <div
        class="bgm-popover__container"
      >
        <div
          class="bgm-popover__content"
        >
          <div
            class="bgm-comment-actions__popover"
          >
            <button
              class="bgm-button bgm-button--text bgm-button--size-small"
            >
              删除
            </button>
            <button
              class="bgm-button bgm-button--text"
            >
              绝交
            </button>
            <button
              class="bgm-button bgm-button--text"
            >
              报告疑虑
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`With Text > should render 1`] = `
<div>
  <div
    class="bgm-comment-actions"
  >
    <button
      class="bgm-button bgm-button--plain bgm-button--size-small"
      title="回复"
    >
      <div />
      回复
    </button>
    <div
      class="bgm-popover bgm-reactions-dropdown"
    >
      <button
        class="bgm-button bgm-reactions-dropdown__button bgm-button--plain"
      >
        <div />
        贴贴
      </button>
      <div
        class="bgm-popover__container"
      >
        <div
          class="bgm-popover__content"
        >
          <ul
            class="bgm-reactions-dropdown__grid"
          >
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/44.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/101.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/41.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/15.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/46.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/65.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/49.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/23.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/40.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/14.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/83.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/53.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/79.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/102.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/51.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/37.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/21.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/89.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/08.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/29.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/98.gif"
              />
            </li>
            <li
              class="bgm-reactions-dropdown__item"
            >
              <img
                class="bgm-reactions-dropdown__smile"
                src="https://lain.bgm.tv/img/smiles/tv/93.gif"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="bgm-popover"
    >
      <button
        class="bgm-button bgm-comment-actions__more bgm-button--plain bgm-button--size-small"
        title="其他"
      >
        <div />
        其他
      </button>
      <div
        class="bgm-popover__container"
      >
        <div
          class="bgm-popover__content"
        >
          <div
            class="bgm-comment-actions__popover"
          >
            <button
              class="bgm-button bgm-button--text"
            >
              绝交
            </button>
            <button
              class="bgm-button bgm-button--text"
            >
              报告疑虑
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
